# onnx-simplifier

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  build_wasm.sh  onnx_simplifier.py  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  test.yml
.github/workflows/onnxsim-pkg/: setup.py
cmake/: build_ort.cmake
onnxsim/: CMakeLists.txt  __init__.py  __main__.py  check.py  cpp2py_export.cc  cxxopts.hpp  model_checking.py  model_info.py  onnx_simplifier.py  onnxsim.cpp  onnxsim.h  remove_add.py
tests/: test_onnxsim.py  test_python_api.py
